# sudoku-solver

./: CMakeLists.txt  Matrix.cpp  Matrix.h  Node.cpp  Node.h  Sudoko_solver.pro  Sudoko_solver.pro.save  Sudoko_solver.pro.user.69b91bc  Sudoku Game.pptx  SudokuSolver.cpp  SudokuSolver.h  click_sound.qrc  file.qrc  loginpage.cpp  loginpage.h  loginpage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  signuppage.cpp  signuppage.h  signuppage.ui  solutiondialog.cpp  solutiondialog.h  sudoku-solver  sudoku.cpp  sudoku.h  test_matrix_sudoku_solvable.cpp  test_node.cpp  users.cpp  users.h  users.txt
.qtcreator/: Sudoko_solver.pro.user.3f8742f
